<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_color"
    android:clickable="true"
    tools:context=".ui.DealItemFragment">

    <ImageView
        android:id="@+id/deal_image_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:contentDescription="@string/product_image"
        android:src="@drawable/ic_launcher_foreground"
        app:layout_constraintBottom_toTopOf="@id/guideline_image"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_image"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/deal_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:textColor="@color/red_color"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline_image"
        tools:text="$8.98" />

    <TextView
        android:id="@+id/deal_regular_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:textColor="@color/silver_color"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/deal_price"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="$8.98" />

    <TextView
        android:id="@+id/deal_regular"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:gravity="center"
        android:text="@string/reg"
        android:textColor="@color/silver_color"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/deal_price"
        app:layout_constraintEnd_toStartOf="@id/deal_regular_price" />

    <TextView
        android:id="@+id/deal_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:textColor="@color/black_color"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deal_price"
        tools:text="This is deal title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@id/deal_add_to_cart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/deal_title"
        app:layout_constraintVertical_bias="0">

        <TextView
            android:id="@+id/deal_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black_color"
            android:textSize="14sp"
            tools:text="@tools:sample/lorem/random" />

    </ScrollView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_button"
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/deal_add_to_list"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/light_gray_color"
        android:gravity="center"
        android:text="@string/add_to_list"
        android:textColor="@color/black_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/guideline_button"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/deal_add_to_cart"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/red_color"
        android:gravity="center"
        android:text="@string/add_to_cart"
        android:textColor="@color/white_color"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/guideline_button" />

</androidx.constraintlayout.widget.ConstraintLayout>